--- a/content/projects/internal-developer-hub.yml
+++ b/content/projects/internal-developer-hub.yml
@@ -1,6 +1,6 @@
-title: Internal Developer Hub (Nuxt Team)
-description: Designed and built key components for an internal documentation and tooling hub for Nuxt developers, focusing on improving developer experience and streamlining access to resources.
-image: https://images.unsplash.com/photo-1517694712202-14dd9538aa97?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80 # Example image related to code/development
+title: TurboWork
+description: CRM system that accelerated broker work by 4x. Transformed scattered Excel spreadsheets into unified platform with 15-widget dashboard, smart client base with 25 parameters, 7-role system, and trading platform integration. Built scalable design system with 100+ components for modular growth.
+image: /turbowork-cover.png
 url: "#"
-tags: ["Developer Tools", "UX Design", "Nuxt", "Design System", "Internal Tools"]
+tags: ["UX Design", "UI Design", "CRM", "Design System"]
 date: "2024"
