--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 # Public URL, used for OG Image when running nuxt generate
 NUXT_PUBLIC_SITE_URL=
+
+# Dribbble API Token
+DRIBBBLE_TOKEN=your_dribbble_token_here
